--- a/src/cordova/www/index.html
+++ b/src/cordova/www/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src 'unsafe-inline' 'unsafe-eval' 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src *;style-src * 'unsafe-inline';script-src * 'unsafe-inline';media-src *; img-src * data:;" />
+    <!-- <meta http-equiv="Content-Security-Policy" -->
+    <!--       content="default-src 'unsafe-inline' 'unsafe-eval' 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <title>gwb.js</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.3.6.min.css">
     <script type="text/javascript" src="cordova.js"></script>
-    <!-- <script type="text/javascript" src="gwb.bc.js"></script> -->
-    <script type="text/javascript" src="init.js"></script>
-    <script type="text/javascript">document.addEventListener("deviceready", initFS, false)</script>
+    <script type="text/javascript" src="gwb.bc.js"></script>
+    <script type="text/javascript">document.addEventListener("deviceready", GWB.init, false)</script>
   </head>
   <body>
     <h1>Loading...</h1>
-    <input type="file" multiple id="input"></input>
-    <button onclick="Page.summary()">GO!</button>
+    <!-- <input type="file" multiple id="input"></input> -->
+    <!-- <button onclick="Page.summary()">GO!</button> -->
   </body>
 </html>
